--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext {
-        libMajor = 0
-        libMinor = 1
-        libPatch = 0
-
-        libVersionCode = libPatch + (libMinor * 100) + (libMajor * 10000)
-
-        kotlin_version = '1.4.21'
-        core_ktx_version = '1.3.2'
-        exoplayer_version = '2.13.0'
-        appcompat_version = '1.2.0'
-        constraintlayout_version = '2.0.4'
-        glide_version = '4.12.0'
-    }
-
     repositories {
         google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
