--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,15 +1,17 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
+apply from: '../dependencies.gradle'
+
 android {
-    compileSdkVersion 30
-    buildToolsVersion '30.0.3'
+    compileSdkVersion build.compileSdk
+    buildToolsVersion build.buildTools
     defaultConfig {
         applicationId 'com.github.vkay94.timebar.example'
-        minSdkVersion 16
-        targetSdkVersion 30
-        versionCode libVersionCode
-        versionName "$libMajor.$libMinor.$libPatch"
+        minSdkVersion build.minSdk
+        targetSdkVersion build.targetSdk
+        versionCode build.libMajor + (build.libMinor * 100) + (build.libPatch * 10000)
+        versionName "$build.libMajor.$build.libMinor.$build.libPatch"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
@@ -48,21 +50,21 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:$appcompat_version"
-    implementation "androidx.core:core-ktx:$core_ktx_version"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
+    implementation "androidx.appcompat:appcompat:$versions.appcompat"
+    implementation "androidx.core:core-ktx:$versions.core_ktx"
+    implementation "androidx.constraintlayout:constraintlayout:$versions.constraintlayout"
 
     // ExoPlayer2
-    implementation "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
-    implementation "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
+    implementation "com.google.android.exoplayer:exoplayer-core:$versions.exoplayer"
+    implementation "com.google.android.exoplayer:exoplayer-ui:$versions.exoplayer"
 
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation "com.google.android.material:material:$versions.material"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.multidex:multidex:2.0.1'
 
-    implementation "com.github.bumptech.glide:glide:$glide_version"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    implementation "com.github.bumptech.glide:glide:$versions.glide"
+    annotationProcessor "com.github.bumptech.glide:compiler:$versions.glide"
 
     implementation project(path: ':library')
 }
